@LucassRoberto [Task: Introdução e implementação do JS ao Blog]

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="p-30">
             <p class = "justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Obcaecati animi, tenetur illo id necessitatibus repellat ipsam reprehenderit ullam iste, 
-                quod nulla velit ea consectetur provident saepe non repellendus voluptatum quo!
+                quod nulla velit ea consectetur provident saepe non repellendus voluptatum quo!Lorem ipsum dolor, sit amet consectetur adipisicing elit.
             </p>
         
             <p class="justify">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi voluptate aspernatur iure id pariatur dignissimos rerum harum, ea, fugit eum aut? Quam mollitia minima debitis adipisci. Eius nobis nisi numquam!
@@ -50,17 +50,22 @@
     <hr>
    <footer>
        <div class="container">
-        <a href="https://www.facebook.com/" target="_blank">
+        <a href="https://www.facebook.com/lucas.barcelos.7165" target="_blank">
             <img class="tam-social p-30" src="assets/img/facebook.png" alt="Logo do Facebook">
         </a>
 
-        <a href="https://www.instagram.com" target="_blank">
+        <a href="https://www.instagram.com/lukckas_/" target="_blank">
             <img class="tam-social p-30" src="assets/img/instagram.png" alt="Logo do Instagram">
         </a>
 
-        <a href="https://www.linkedin.com" target="_blank">
+        <a href="https://www.linkedin.com/in/lucas-roberto-de-oliveira-barcelos/" target="_blank">
             <img class="tam-social p-30" src="assets/img/linkedin.png" alt="Logo do Linkedin">
         </a>
+
+        <a href="https://github.com/LucassRoberto" target="_blank">
+            <img class="tam-social p-30" src="assets/img/github.png" alt="Logo do github">
+        </a>
+        
        </div>
 
        <p class="center">
